--- a/hw-01-components/src/Components/FriendList/FriendList.module.css
+++ b/hw-01-components/src/Components/FriendList/FriendList.module.css
@@ -1,4 +1,4 @@
-.friends__item {
+.item {
   background-color: white;
   box-shadow: 0px 5px 5px 2px rgba(176, 166, 176, 0.5);
   display: flex;
@@ -31,14 +31,14 @@
   margin-right: 15px;
 }
 
-.friends__avatar {
+.avatar {
   border-radius: 20%;
   width: 100px;
   height: 100px;
   margin: 10px;
 }
 
-.friends__name {
+.name {
   font-weight: 700;
   font-size: 18px;
   padding-bottom: 13px;
