--- a/hw-01-components/src/Components/Statistics/Statistics.module.css
+++ b/hw-01-components/src/Components/Statistics/Statistics.module.css
@@ -19,7 +19,7 @@
   list-style: none;
 }
 
-.stat__item {
+.item {
   flex: 1 1 0;
   display: flex;
   flex-direction: column;
@@ -28,7 +28,7 @@
   color: black;
 }
 
-.stat__label {
+.label {
   color: black;
   font-size: 12px;
   padding-bottom: 10px;
