--- a/hw-01-components/src/Components/Profile/Profile.module.css
+++ b/hw-01-components/src/Components/Profile/Profile.module.css
@@ -1,13 +1,3 @@
-body {
-  background-color: rgb(240, 243, 246);
-}
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
 .profile {
   width: 250px;
   font-family: "Lato", sans-serif;
@@ -56,7 +46,7 @@ body {
   border-top: 1px solid rgb(175, 184, 202);
 }
 
-.stats > li {
+.stats > .li {
   width: 33.3%;
   display: flex;
   flex-direction: column;
@@ -65,7 +55,7 @@ body {
   background-color: rgb(243, 246, 249);
 }
 
-.stats > li:not(:last-child) {
+.stats > .li:not(:last-child) {
   border-right: 1px solid rgb(228, 233, 240);
 }
 
